@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2004/11/01 20:37:44 jdolecek Exp $
+
+SHA1 (Net_URL-1.0.10.tgz) = b2793afbf25a2df6738efa11455eb5b2816ac770
+Size (Net_URL-1.0.10.tgz) = 4464 bytes
